# doc/response.go
@@ -13,7 +13,7 @@ type CreateCatParam struct {
 	Body model.CreateCat `json:"body"`
 }
 
-// swagger:parameters GetCat UpdateCat DeleteCat UploadCatImage
+// swagger:parameters GetCat UpdateCat DeleteCat UploadCatImage GetCatImage
 type CatUUIDParam struct {
 	// in:path
 	// required:true
@@ -22,6 +22,13 @@ type CatUUIDParam struct {
 
 // swagger:response getCatResponse
 type GetCatResponse struct {
+	// The response message
+	// in: body
+	Body model.Cat `json:"body"`
+}
+
+// swagger:response updateCatResponse
+type UpdateCatResponse struct {
 	// The response message
 	// in: body
 	Body model.Cat `json:"body"`
@@ -44,6 +51,36 @@ type ErrorResponseBody struct {
 
 	// Error An optional detailed description of the actual error. Only included if running in developer mode.
 	Error string `json:"error"`
+}
+
+// InternalServerError is a general error indicating something went wrong internally.
+//
+// swagger:response internalServerError
+type InternalServerError GenericError
+
+// NotFoundError is returned when the request is invalid and it cannot be processed.
+//
+// swagger:response notFoundError
+type NotFoundError GenericError
+
+// BadRequestError is returned when the request is invalid and it cannot be processed.
+//
+// swagger:response badRequestError
+type BadRequestError GenericError
+
+// A UnauthorizedError is the default error message that is generated by echo JWT middleware.
+//
+// swagger:response unauthorizedError
+type UnauthorizedError struct {
+	// The response message
+	// in: body
+	Body UnauthorizedErrorBody `json:"body"`
+}
+
+type UnauthorizedErrorBody struct {
+	// a human readable version of the error
+	// required: true
+	Message string `json:"message"`
 }
 
 // swagger:parameters UploadCatImage
@@ -115,21 +152,6 @@ type RefreshTokenResponse struct {
 type RefreshTokenResponseBody struct {
 	Tokens model.Tokens `json:"tokens"`
 }
-
-// InternalServerError is a general error indicating something went wrong internally.
-//
-// swagger:response internalServerError
-type InternalServerError GenericError
-
-// NotFoundError is returned when the request is invalid and it cannot be processed.
-//
-// swagger:response notFoundError
-type NotFoundError GenericError
-
-// BadRequestError is returned when the request is invalid and it cannot be processed.
-//
-// swagger:response badRequestError
-type BadRequestError GenericError
 
 // An OKResponse is returned if the request was successful.
 //
